--- a/trunk/client/stylesheets/style.css
+++ b/trunk/client/stylesheets/style.css
@@ -831,6 +831,7 @@ td .page-title {
 .tabbed-content .panel tr td {
   padding: 10px;
   font-weight: bold;
+  vertical-align: top;
 }
 
 .panel tr td.property, .panel .property {
@@ -1826,6 +1827,12 @@ td .info {
 .tooltip-left .tooltip-arrow {
   left: 90%;
   margin-left: -7px;
+  margin-top: -4px;
+}
+
+.tooltip-right .tooltip-arrow {
+  left: 10%;
+  margin-left: -6px;
   margin-top: -4px;
 }
 
