--- a/clientv2/js/client/templates/criteria-number.tmpl.html
+++ b/clientv2/js/client/templates/criteria-number.tmpl.html
@@ -2,14 +2,14 @@
 	<span data-bind="text: field.name"></span>
 	<img data-bind="attr: { 'tooltip-key': field.id }" src="img/info-tab-large.png" alt="" class="tooltip-item" width="20" height="20" />
 </td>
-<td class="min formattable"></td>
+<td data-bind="text: min()" class="min formattable"></td>
 <td class="criteria-slider">
 	<div class="module-stock-slider">
-		<div class="slider-bar"></div>
+		<div data-bind="slider" class="slider-bar"></div>
 		<div class="stock-bar-container"></div>
 		<div class="bar"></div>
-		<div class="matches"></div>
+		<div data-bind="text: matches" class="matches"></div>
 	</div>
 </td>
-<td class="max formattable"></td>
+<td data-bind="text: max()" class="max formattable"></td>
 <td class="remove"><img data-bind="click: criteria.clickEvents.removeCriteria" src="img/x-button.png" alt="" class="tooltip-item" tooltip-key="criteriaRemove" /></td>
