--- a/clientv2/js/client/templates/criteria-select.html
+++ b/clientv2/js/client/templates/criteria-select.html
@@ -2,13 +2,15 @@
 	<span data-bind="text: field.name"></span>
 	<img data-bind="attr: { 'tooltip-key': field.id }" src="img/info-tab-large.png" alt="" class="tooltip-item" width="20" height="20" />
 </td>
-<td colspan="3">
-	<div class="button-dropdown">
-		<div class="trigger"><span class="copy"></span>
+<td colspan="3" class="middle">
+	<div class="button-dropdown" data-bind="attr: { 'data-label': field.name }">
+		<div class="trigger"><span class="copy" data-bind="text: field.name"></span>
 			<span class="arrow"></span>
 		</div>
 		<div class="dropdown">
-			<ul></ul>
+			<ul data-bind="foreach: field.buckets">
+				<li data-bind="text: key"></li>
+			</ul>
 		</div>
 	</div>
 </td>
