--- a/clientv2/js/client/templates/criteria-change.html
+++ b/clientv2/js/client/templates/criteria-change.html
@@ -1,8 +1,12 @@
-<td class="label">
+<td class="label" data-bind="configureAdditionalCriteria: 'criteria-change-configure'">
 	<span data-bind="text: field.name"></span>
-	<img data-bind="attr: { 'tooltip-key': field.id }" src="img/info-tab-large.png" alt="" class="tooltip-item" width="20" height="20" />
+	<img data-bind="tooltip: field.id" src="img/info-tab-large.png" alt="" width="20" height="20" />
 </td>
 <td colspan="3" class="middle">
-	<span class="percent-value"></span>% from <span class="start-date"></span> to <span class="end-date"></span>
+	<span data-bind="text: val"></span>% 
+	from 
+	<span data-bind="text: $.datepicker.formatDate('dd/M/yy', min())"></span> 
+	to 
+	<span data-bind="text: $.datepicker.formatDate('dd/M/yy', max())"></span>
 </td>
-<td class="remove"><img data-bind="click: criteria.clickEvents.removeCriteria" src="img/x-button.png" alt="" class="tooltip-item" tooltip-key="criteriaRemove" /></td>
+<td class="remove"><img data-bind="tooltip: 'criteriaRemove', click: criteria.clickEvents.removeCriteria" src="img/x-button.png" alt="" /></td>
