--- a/clientv2/js/client/templates/criteria-number.html
+++ b/clientv2/js/client/templates/criteria-number.html
@@ -1,6 +1,6 @@
 <td class="label">
 	<span data-bind="text: field.name"></span>
-	<img data-bind="attr: { 'tooltip-key': field.id }" src="img/info-tab-large.png" alt="" class="tooltip-item" width="20" height="20" />
+	<img data-bind="tooltip: field.id" src="img/info-tab-large.png" alt="" width="20" height="20" />
 </td>
 <td data-bind="text: min(), format: field.format" class="middle"></td>
 <td class="criteria-slider middle">
@@ -12,4 +12,4 @@
 	</div>
 </td>
 <td data-bind="text: max(), format: field.format" class="middle"></td>
-<td class="remove"><img data-bind="click: criteria.clickEvents.removeCriteria" src="img/x-button.png" alt="" class="tooltip-item" tooltip-key="criteriaRemove" /></td>
+<td class="remove"><img data-bind="tooltip: 'criteriaRemove', click: criteria.clickEvents.removeCriteria" src="img/x-button.png" alt="" /></td>
