--- a/clientv2/js/client/templates/criteria-select.html
+++ b/clientv2/js/client/templates/criteria-select.html
@@ -1,6 +1,6 @@
 <td class="label">
 	<span data-bind="text: field.name"></span>
-	<img data-bind="attr: { 'tooltip-key': field.id }" src="img/info-tab-large.png" alt="" class="tooltip-item" width="20" height="20" />
+	<img data-bind="tooltip: field.id" src="img/info-tab-large.png" alt="" width="20" height="20" />
 </td>
 <td colspan="3" class="middle">
 	<div class="button-dropdown" data-bind="attr: { 'data-label': field.name }">
@@ -14,4 +14,4 @@
 		</div>
 	</div>
 </td>
-<td class="remove"><img data-bind="click: criteria.clickEvents.removeCriteria" src="img/x-button.png" alt="" class="tooltip-item" tooltip-key="criteriaRemove" /></td>
+<td class="remove"><img data-bind="tooltip: 'criteriaRemove', click: criteria.clickEvents.removeCriteria" src="img/x-button.png" alt="" /></td>
