--- a/clientv2/js/client/templates/alpha-factor.tmpl.html
+++ b/clientv2/js/client/templates/alpha-factor.tmpl.html
@@ -1,4 +1,4 @@
-<span class="factor" data-bind="createFactor">
+<span class="factor" data-bind="createFactor, css: { 'odd': ($index() % 2 == 0) }">
 	<span class="label">
 		<span data-bind="text: name"></span>
 		<img data-bind="tooltip: id" src="img/info.jpg" alt="" width="11" height="11" />
