--- a/trunk/clientv2/css/screener.css
+++ b/trunk/clientv2/css/screener.css
@@ -358,9 +358,8 @@ table.search-criteria .remove {
 }
 
 .factor {
-	padding:12px 0;
+	padding:12px 0 12px 12px;
 	margin: 0;
-	margin-left: 12px;
 }
 
 .factor .label {
