making af search work as well as defaults

--- a/clientv2/js/client/templates/alpha-factor.tmpl.html
+++ b/clientv2/js/client/templates/alpha-factor.tmpl.html
@@ -5,7 +5,7 @@
 	</span>
     <span>
         <span data-bind="text: minLabel" class="left-label"></span>
-        <span class="quintiles"></span>
+        <span class="quintiles" data-bind="attr: { 'data-id': id }" ></span>
         <span class="bar"></span>
         <span data-bind="text: maxLabel" class="right-label"></span>
     </span>
