--- a/clientv2/js/client/templates/criteria-select.html
+++ b/clientv2/js/client/templates/criteria-select.html
@@ -3,8 +3,9 @@
 	<img data-bind="tooltip: field.id" src="img/info-tab-large.png" alt="" width="20" height="20" />
 </td>
 <td colspan="3" class="middle">
-	<div class="button-dropdown" data-bind="attr: { 'data-label': field.name }">
-		<div class="trigger"><span class="copy" data-bind="text: field.name"></span>
+	<input type="hidden" data-bind="value: val">
+	<div class="button-dropdown" data-bind="attr: { 'data-label': field.label }">
+		<div class="trigger"><span class="copy" data-bind="text: field.label"></span>
 			<span class="arrow"></span>
 		</div>
 		<div class="dropdown">
