--- a/clientv2/css/style.css
+++ b/clientv2/css/style.css
@@ -32,7 +32,7 @@ h2 {
     margin-bottom: 20px;
 }
 
-h3 {
+h3, h3 span {
     color: #1e2171;
     font-size: 16px;
     font-weight: bold;
@@ -103,6 +103,10 @@ p {
 .grid .column-two {
 	margin-left: 15px;
     width:320px;
+}
+
+.grid.disclosure {
+	margin-top: 20px;
 }
 
 /** buttons */
