--- a/trunk/clientv2/css/style.css
+++ b/trunk/clientv2/css/style.css
@@ -55,6 +55,38 @@ p {
 	margin: 15px 0;
 }
 
+strong {
+	font-weight: bold;
+}
+
+li ul, li ol {
+	margin:0 3em;
+}
+
+ul, ol {
+	margin:1em 3em 3em 3em;
+}
+
+ul {
+	list-style-type:disc;
+}
+
+ol {
+	list-style-type:decimal;
+}
+
+ol ol {
+	list-style: upper-alpha;
+}
+
+ol ol ol {
+	list-style: lower-roman;
+}
+
+ol ol ol ol {
+	list-style: lower-alpha;
+}
+
 .left {
 	text-align: left !important;
 }
