--- a/clientv2/css/style.css
+++ b/clientv2/css/style.css
@@ -119,6 +119,10 @@ ol ol ol ol {
 	font-weight: normal !important;
 }
 
+.tooltip-item {
+	cursor: pointer;
+}
+
 .inline-block {
 	display: inline-block;
 	margin-right: 10px;
@@ -134,6 +138,14 @@ ol ol ol ol {
 
 .gray {
 	background-color: #f2f2f2;
+}
+
+.gray-border {
+	border:1px solid #ccc;
+}
+
+.padded {
+	padding: 8px;
 }
 
 /* Containers */
