--- a/clientv2/css/tearsheet.css
+++ b/clientv2/css/tearsheet.css
@@ -147,6 +147,10 @@
 	line-height: 125%;
 }
 
+#key-devs {
+	width: 99%;
+}
+
 .key-devs {
   padding: 0px;
   margin: 10px 0 25px;
@@ -155,9 +159,10 @@
 .key-devs ul {
   margin: 0px 0;
   padding: 10px 10px 0;
-  border: 1px solid #ccc;
+  border: 1px solid red;
   border-top: none;
 }
+
 .key-devs li {
   position: relative;
   margin: 0 0 9px 0;
@@ -200,4 +205,64 @@
 
 div.news {
 	margin-bottom: 10px;
+}
+
+.recommendation {
+	overflow: hidden;
+	padding-top: 25px;
+	margin: 10px 0;
+}
+
+.recommendation span.inline-block {
+	width: 32%;
+	font-weight: bold;
+}
+
+.recommendation.opt-1 {
+	background: url("../img/consensus-step-1.jpg") no-repeat;	
+}
+
+.recommendation.opt-2 {
+	background: url("../img/consensus-step-2.jpg") no-repeat;	
+}
+
+.recommendation.opt-3 {
+	background: url("../img/consensus-step-3.jpg") no-repeat;	
+}
+
+.recommendation.opt-4 {
+	background: url("../img/consensus-step-4.jpg") no-repeat;	
+}
+
+.recommendation.opt-5 {
+	background: url("../img/consensus-step-5.jpg") no-repeat;	
+}
+
+.consensus-price span {
+	display: block;
+	padding-top: 8px;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 22px;
+}
+
+.factor {
+	margin: 5px 0;
+}
+
+.factor .label {
+	display: block;
+	margin-bottom: 3px;
+}
+
+.factor .left-label {
+	margin-right: 5px;
+}
+
+.factor .right-label {
+	width: auto;
+}
+
+.factor.odd {
+	background-color: inherit;
 }
