getting URL based industry search working

--- a/clientv2/css/style.css
+++ b/clientv2/css/style.css
@@ -429,6 +429,10 @@ background: url("../img/title-back.png");
 
 /** modal */
 
+#cboxOverlay{
+	opacity: .35 !important;
+}
+
 .modal-container {
 	padding: 0 20px 20px 20px;
 	overflow-x: hidden;
