adding in trade page, fixing company header

--- a/clientv2/js/client/templates/company-header.tmpl.html
+++ b/clientv2/js/client/templates/company-header.tmpl.html
@@ -33,10 +33,16 @@
 	
 	<hr />
 	
+	<a data-bind="siteLink: { id: 'trade', extra: 'code=' + ticker } ">Trade</a>
+	
+	<hr />
+	
 	<a data-bind="siteLink: { id: 'company-tearsheet', extra: 'code=' + ticker } ">Profile</a> | 
 	<a data-bind="siteLink: { id: 'company-financials', extra: 'code=' + ticker }">Financials</a> | 
 	<a data-bind="siteLink: { id: 'company-estimates', extra: 'code=' + ticker }">Estimates</a> | 
 	<a data-bind="siteLink: { id: 'company-charting', extra: 'code=' + ticker }">Technical Charting</a> | 
 	<a data-bind="siteLink: { id: 'company-comparables', extra: 'code=' + ticker }">Comparables</a>
-	
+
+	<hr />
+		
 </div>
