--- a/clientv2/js/client/templates/company-header.tmpl.html
+++ b/clientv2/js/client/templates/company-header.tmpl.html
@@ -50,11 +50,11 @@
 	
 		<nav>
 			<ul>
-				<li class="active"><a data-bind="siteLink: { id: 'company-tearsheet', extra: 'code=' + ticker } ">Profile</a></li>
-				<li><a data-bind="siteLink: { id: 'company-financials', extra: 'code=' + ticker }">Financials</a></li>
-				<li><a data-bind="siteLink: { id: 'company-estimates', extra: 'code=' + ticker }">Estimates</a></li>
-				<li><a data-bind="siteLink: { id: 'company-charting', extra: 'code=' + ticker }">Technical Charting</a></li>
-				<li><a data-bind="siteLink: { id: 'company-comparables', extra: 'code=' + ticker }">Comparable Companies</a></li>
+				<li class="company-tearsheet"><a data-bind="siteLink: { id: 'company-tearsheet', extra: 'code=' + ticker } ">Profile</a></li>
+				<li class="company-financials"><a data-bind="siteLink: { id: 'company-financials', extra: 'code=' + ticker }">Financials</a></li>
+				<li class="company-estimates"><a data-bind="siteLink: { id: 'company-estimates', extra: 'code=' + ticker }">Estimates</a></li>
+				<li class="company-charting"><a data-bind="siteLink: { id: 'company-charting', extra: 'code=' + ticker }">Technical Charting</a></li>
+				<li class="company-comparables"><a data-bind="siteLink: { id: 'company-comparables', extra: 'code=' + ticker }">Comparable Companies</a></li>
 			</ul>		
 		</nav>
 	</div>		
