--- a/clientv2/css/style.css
+++ b/clientv2/css/style.css
@@ -62,9 +62,11 @@ p {
 	margin: 15px 0;
 }
 
-strong {
+strong, b {
 	font-weight: bold;
 }
+
+i { font-style: italic; }
 
 li ul, li ol {
 	margin:0 3em;
@@ -271,13 +273,15 @@ table th, table td {
 /* Premium Header */
 .header { margin: 10px 0 0 0; }
 .header .login-bar { background: #d5e3ea; border: 1px solid #b3c6cf; color: #333 !important; height: 28px; font-size: 0; }
+.header .login-bar a { color: #0b236b; text-decoration: none; }
+.header .login-bar a:hover { text-decoration: underline; }
 .header .login-bar span,
 .header .login-bar ul,
 .header .login-bar ul li,
 .header .login-bar select { display: inline-block; line-height: 28px !important; }
-.header .login-bar .stock-facts { font-weight: bold; padding: 0 12px }
-.header .login-bar .stock-facts i { font-style: italic;}
-.header .login-bar .logged-in { background: #b3c6cf; font-weight: bold; padding: 0 9px; }
+.header .login-bar .stock-facts { padding: 0 12px }
+.header .login-bar.logged-in .stock-facts { font-weight: bold; padding: 0 12px }
+.header .login-bar .logged-in-as { background: #b3c6cf; font-weight: bold; padding: 0 9px; }
 .header .login-bar ul { margin: 0 !important; padding: 0 6px; }
 .header .login-bar ul li { border-right: 1px solid #333; line-height: 16px !important; padding: 0 6px; }
 .header .login-bar ul li a { text-decoration: none; }
@@ -286,6 +290,7 @@ table th, table td {
 .header .login-bar .currency { font-weight: bold; }
 .header .login-bar select { background: #d9d9d9; border: 1px solid #b6b6b6; font-size: 7.5pt; font-weight: bold; }
 .header .login-bar .right { float: right; margin: 0 12px 0 0; }
+.header .login-bar .button { background: #0b236b; color: #fff; border-radius: 4px; line-height: 20px; padding: 0 10px; text-decoration: none; margin: 4px 0 4px 8px; }
 
 .header .profile { background: #0b236b; margin: 18px 0; }
 .header .profile .left { float: left; margin: 28px 0 10px 22px; }
